@@ -1,30 +1,35 @@
+# This -*- Makefile -*- is intended for processing with GNU make.
+
+# instead of modifying this file, you could also set your modified variables
+# in make.settings.local (needs to be created first)
+-include $(dir $(word $(words $(MAKEFILE_LIST)),$(MAKEFILE_LIST)))make.settings.local
+
 # Change this file according to your paths
 
-# change this path, do not leave spaces at the end of the line 
-STXXL_ROOT = /home/dementiev/workspace/Stxxl#
+USE_BOOST	?= no	# set 'yes' to use Boost libraries or 'no' to not use Boost libraries
+USE_LINUX	?= yes	# set 'yes' if you run Linux, 'no' otherwise
 
-USE_BOOST = no # set 'yes' to use Boost libraries or 'no' to not use Boost libraries
-USE_LINUX = yes # set 'yes' if you run Linux, 'no' otherwise
+STXXL_ROOT	?= /home/dementiev/workspace/Stxxl
 
-# change this path, do not leave spaces at the end of the line
-BOOST_INCLUDE = /usr/include/boost-1_33/#
+BOOST_INCLUDE	?= /usr/include/boost-1_33
 
-MAKE = make # or gmake
-COMPILER	 = g++
-LINKER		 = $(COMPILER)
-OPT		 = -O3 # compiler optimization level
-WARNINGS	 = -Wall
-DEBUG		 = # put here -g option to include the debug information into the binaries
+COMPILER	?= g++
+LINKER		?= $(COMPILER)
+OPT		?= -O3 # compiler optimization level
+WARNINGS	?= -Wall
+DEBUG		?= # put here -g option to include the debug information into the binaries
 
-LIBNAME = stxxl
+LIBNAME		?= stxxl
+
+
+#### you usually shouldn't need to change the sections below #####
+
 
 #### BOOST OPTIONS ###############################################
-
 
 BOOST_LINKER_OPTIONS = -lboost_thread-gcc-mt \
  -lboost_date_time-gcc-mt -lboost_iostreams-gcc-mt \
  -lboost_filesystem-gcc-mt
-
 
 BOOST_COMPILER_OPTIONS =  \
  -DSTXXL_BOOST_TIMESTAMP \
@@ -32,10 +37,9 @@ BOOST_COMPILER_OPTIONS =  \
  -DSTXXL_BOOST_FILESYSTEM \
  -DSTXXL_BOOST_THREADS \
  -DSTXXL_BOOST_RANDOM \
- -I$(BOOST_INCLUDE) \
+ -I$(strip $(BOOST_INCLUDE)) \
  -pthread
  
-
 ##################################################################
 
 
@@ -54,7 +58,7 @@ MNG_LAYER_FILES = ../mng/adaptor.h  ../mng/async_schedule.h  ../mng/block_prefet
 ../mng/buf_istream.h  ../mng/buf_ostream.h  ../mng/buf_writer.h  ../mng/mng.h \
 ../mng/write_pool.h ../mng/prefetch_pool.h
 
-CONTAINER_MAP_FILES = # $(STXXL_ROOT)/containers/map.impl/*.h
+CONTAINER_MAP_FILES = # $(strip $(STXXL_ROOT))/containers/map.impl/*.h
 
 CONTAINER_FILES = ../containers/pager.h  ../containers/stack.h  ../containers/vector.h \
 ../containers/priority_queue.h ../containers/queue.h $(CONTAINER_MAP_FILES)
@@ -66,6 +70,7 @@ ALGO_FILES = ../algo/adaptor.h ../algo/inmemsort.h ../algo/intksort.h ../algo/ru
 STREAM_FILES = ../stream/stream.h ../stream/sort_stream.h
 
 ###################################################################
+
 
 ###### MISC #######################################################
 
@@ -83,7 +88,7 @@ STXXL_SPECIFIC = \
  -DSORT_OPT_PREFETCHING \
  -DUSE_MALLOC_LOCK \
  -DCOUNT_WAIT_TIME \
- -I$(STXXL_ROOT)/ \
+ -I$(strip $(STXXL_ROOT)) \
  -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE \
  $(POSIX_MEMALIGN) $(XOPEN_SOURCE)
 
@@ -95,15 +100,13 @@ STXXL_SPECIFIC = \
 # STXXL_SPECIFIC += -DSTXXL_DEBUGMON
 
 
-# WARNINGS = -Wall
-
 CPPUNIT_COMPILER_OPTIONS = -I/usr/include
 CPPUNIT_LINKER_OPTIONS = -L/usr/lib -lcppunit -ldl
 
 
 STXXL_COMPILER_OPTIONS = $(STXXL_SPECIFIC) $(WARNINGS) \
  $(DEBUG) $(OPT)
-STXXL_LINKER_OPTIONS = -L$(STXXL_ROOT)/lib/ -l$(LIBNAME) -lpthread
+STXXL_LINKER_OPTIONS = -L$(strip $(STXXL_ROOT))/lib -l$(LIBNAME) -lpthread
 
 ifeq ($(strip $(USE_BOOST)),yes)
 STXXL_COMPILER_OPTIONS += $(BOOST_COMPILER_OPTIONS)
@@ -130,3 +133,4 @@ endif
 # to reconfigure the kernel for the support of the direct I/O.
 #
 #
+# vim: syn=make
